--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,7 +8,7 @@ limit_req_zone $binary_remote_addr zone=login:10m rate=5r/m;
 # HTTP to HTTPS redirect
 server {
     listen 80;
-    server_name localhost 127.0.0.1 folderheaven.ddns.net;
+    server_name folderheaven.ddns.net;
     
     # Allow Let's Encrypt challenges
     location /.well-known/acme-challenge/ {
@@ -23,13 +23,12 @@ server {
 
 # HTTPS server
 server {
-    listen 443 ssl;
-    http2 on;
+    listen 443 ssl http2;
     server_name folderheaven.ddns.net;
 
-    # SSL certificate paths
-    ssl_certificate /etc/nginx/ssl/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+    # SSL certificate paths --- UPDATED FOR LETSENCRYPT ---
+    ssl_certificate /etc/letsencrypt/live/folderheaven.ddns.net/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/folderheaven.ddns.net/privkey.pem;
     
     # Modern SSL configuration
     ssl_protocols TLSv1.2 TLSv1.3;
