--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,11 +16,13 @@ services:
   nginx:
     image: nginx:stable-alpine
     ports:
-      - 81:80
+      - 80:80
       - 443:443
     volumes:
-      - ./nginx/default-dev.conf:/etc/nginx/conf.d/default.conf
-      - ./ssl/:/etc/nginx/ssl:ro
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+     # - ./ssl/:/etc/nginx/ssl:ro
+      - /etc/letsencrypt/live:/etc/letsencrypt/live:ro
+      - /etc/letsencrypt/archive:/etc/letsencrypt/archive:ro
     networks:
       - docker-network
     depends_on:
